<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="150dp"
        android:paddingEnd="10dp"
        android:theme="@style/MovieCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:theme="@style/MovieTitle"/>

        <TextView
            android:id="@+id/release_date"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="0dp"
            android:text="@string/release_date"
            android:textSize="14sp"
            android:textStyle="bold"
            android:theme="@style/MovieSubtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vote"
                style="@style/text_view_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginTop="0dp"
                android:text="@string/rating"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/yellow"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_marginStart="10dp"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/movie_poster"
        android:src="@drawable/ic_image_placeholder"
        android:scaleType="centerInside"/>

</androidx.constraintlayout.widget.ConstraintLayout>