<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:fitsSystemWindows="true">

        <include layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:theme="@style/MovieBackground"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:theme="@style/MovieCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/vote"
                        style="@style/text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_marginTop="0dp"
                        android:text="@string/rating"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textColor="@color/yellow"/>

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_marginStart="10dp"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="0" />

                </LinearLayout>

                <TextView
                    android:id="@+id/release_date"
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="0dp"
                    android:text="@string/release_date"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:theme="@style/MovieTitle" />

                <TextView
                    android:id="@+id/overview"
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="0dp"
                    android:text="@string/overview"
                    android:textSize="14sp"
                    android:theme="@style/MovieSubtitle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:theme="@style/MovieCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        style="@style/text_view_style"
                        android:gravity="start"
                        android:text="@string/actors"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:theme="@style/MovieTitle"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        style="@style/text_view_style"
                        android:gravity="center|end"
                        android:text="@string/view_all"
                        android:theme="@style/MovieSubtitle"/>

                </LinearLayout>


                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:rowCount="1"
                    android:columnCount="5"
                    android:columnOrderPreserved="true"
                    android:rowOrderPreserved="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:scaleType="centerCrop"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:src="@drawable/male"
                        app:civ_border_width="5dp"
                        app:civ_border_color="@color/app_purple"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:scaleType="centerCrop"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:src="@drawable/female"
                        app:civ_border_width="5dp"
                        app:civ_border_color="@color/app_purple"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:scaleType="centerCrop"
                        android:layout_column="2"
                        android:layout_columnWeight="1"
                        android:src="@drawable/male"
                        app:civ_border_width="5dp"
                        app:civ_border_color="@color/app_purple"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:scaleType="centerCrop"
                        android:layout_column="3"
                        android:layout_columnWeight="1"
                        android:src="@drawable/female"
                        app:civ_border_width="5dp"
                        app:civ_border_color="@color/app_purple"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:scaleType="centerCrop"
                        android:layout_column="4"
                        android:layout_columnWeight="1"
                        android:src="@drawable/male"
                        app:civ_border_width="5dp"
                        app:civ_border_color="@color/app_purple"/>

                </GridLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>